# miniflows

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/miniflows/: __init__.py  causal_mlp.py  coupling_aff.py  coupling_nsf.py  maf.py  mansf.py  plu.py  spline.py
tests/: test_causal_mlp.py  test_coupling.py  test_coupling_nsf.py  test_maf.py  test_mansf.py  test_plu.py  test_spline.py  test_training.py
